<resources>
    <string name="app_name">力利通</string>
    <string name="takePhoto">拍照</string>
    <string name="check_from_disk">从手机相册选择</string>
    <string name="qv_add">+</string>
    <string name="qv_remove">-</string>
    <string name="about_us">关于我们</string>
    <string name="title_login">登录</string>
    <string name="introduction">力利通，做最好的供需接单平台</string>
    <string name="copyright">Copyright.@2106-2017 AII Rights Reserved</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_lib">从相册选择</string>
    <string name="sharing_success">分享成功</string>
    <string name="stop_sharing">分享取消</string>
    <string name="title_new_user_register">新用户注册</string>
    <string name="change_nicename">修改昵称</string>
    <string name="title_publish_project">发布项目</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_confirm">确定</string>

    <!--首页-->
    <string name="home_title_search">搜索项目</string>
    <string name="home_work">找工人</string>
    <string name="home_material">找材料</string>
    <string name="home_project">找项目</string>
    <string name="home_history">历史项目</string>
    <string name="home_rv_work">- 为您推荐工人 -</string>
    <string name="home_rv_material">- 我要买材料 -</string>
    <string name="home_rv_project">- 接单做项目 -</string>

    <!--搜索项目列表-->
    <string name="search_project_title">搜索</string>
    <string name="search_project_hint">搜索内容</string>

    <!--店铺列表-->
    <string name="store_list_title">店铺</string>
    <string name="store_list_all">全部店铺</string>
    <string name="store_list_distance">按距离排序</string>
    <string name="store_detail_title">店铺详情</string>

    <!--店铺详情-->
    <string name="store_detail_location">导航</string>

    <!--工人列表-->
    <string name="work_list_title">工人列表</string>
    <string name="work_detail_title">工人详情</string>
    <string name="work_evaluate_title">工人评价</string>
    <string name="evaluate_work_title">评论工人</string>
    <string name="evaluate_text">评论</string>
    <string name="evaluate_star_num">好评度</string>
    <string name="evaluate_work_add_img">添加图片</string>
    <string name="work_detail_evaluate">需求方对工人的评价</string>
    <string name="order_detail_evaluate">需求方评价记录</string>

    <!--我的接单-->
    <string name="my_receipt_loading">进行中</string>
    <string name="my_receipt_finish">已完成</string>
    <string name="my_receipt_look">查看</string>
    <string name="my_receipt_evaluate">评价</string>
    <string name="evaluate_demand_title">评论需求方</string>

    <!--找项目-->
    <string name="project_title">项目列表</string>


</resources>
