<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_bg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/store_list_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titlebar_title_size" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:src="@drawable/right_arrows"
            android:tint="@color/colorWhite" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/home_title_right"
        android:paddingRight="@dimen/home_title_right"
        android:background="@color/colorWhite"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">
        <TextView
            android:id="@+id/tv_store_list_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_store_list_shape"
            android:text="@string/store_list_all"
            android:gravity="center"
            android:textSize="@dimen/text_dimen_fourth"
            android:textColor="@color/text_color_white"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/tv_store_list_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_store_list_shape"
            android:text="@string/store_list_distance"
            android:gravity="center"
            android:textSize="@dimen/text_dimen_fourth"
            android:textColor="@color/text_normal"
            android:padding="8dp"
            />
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_store_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_store_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/search_project_title_txt_left">

        </android.support.v7.widget.RecyclerView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</LinearLayout>