<?xml version="1.0" encoding="utf-8"?><!--关于我们-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_us"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titlebar_title_size" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:src="@drawable/right_arrows"
            android:tint="@color/colorWhite" />
    </FrameLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="66dp"
        android:src="@mipmap/img_logo" />

    <TextView
        android:id="@+id/iv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="@color/text_color_third"
        android:textSize="12sp"
        tools:text="V1.0.1" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/introduction"
        android:textColor="@color/text_color_second"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="77dp"
        android:text="申请入驻请电话联系客服"
        android:textColor="@color/text_color_third"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_submit"
        style="@style/buttone_primary"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="拨打客服" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        android:text="客服电话：888888"
        android:textColor="@color/text_color_third"
        android:textSize="14sp" />

    <View
        android:layout_width="1px"
        android:layout_height="0px"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/text_color_third"
        android:textSize="10sp" />
</LinearLayout>